--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "dependencies": {
     "@babylonjs/core": "^4.2.0",
+    "@babylonjs/gui": "^4.2.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@solana/web3.js": "^1.12.0",
@@ -24,6 +25,7 @@
     "notistack": "^1.0.7",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
+    "react-babylonjs": "^3.0.15",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
